--- a/about.html
+++ b/about.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <div class="container flex justify-between items-center">
-            <a href="index.html" class="logo"><i class='bx bx-code-block'></i> IT SQUAD</a>
+            <a href="index.html" class="logo">
+                <i class='bx bx-code-block'></i> IT SQUAD
+            </a>
             <nav>
                 <ul class="nav-links">
                     <li class="dropdown">
@@ -33,13 +35,13 @@
                         </div>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="login.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Login</a>
-                    </li>
+                    <li><a href="login.html" class="btn btn-outline" style="padding: 8px 16px;">Login</a></li>
+                    <li><a href="register.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Sign
+                            Up</a></li>
                 </ul>
             </nav>
             <div class="controls">
-                <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐</button>
+                <button id="rtl-toggle" class="btn-icon-animate" title="RTL Toggle"><i class='bx bx-globe'></i></button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
@@ -50,7 +52,7 @@
         <section class="hero"
             style="min-height: 40vh; background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
             <div class="container" style="text-align: center;">
-                <div class="hero-content" style="margin: 0 auto; color: white;">
+                <div class="hero-content animate-fade-up" style="margin: 0 auto; color: white;">
                     <h1 style="color: white;">About Our Team</h1>
                     <p style="margin: 0 auto; color: #e2e8f0;">Dedicated to delivering the best IT support experience.
                     </p>
@@ -60,7 +62,7 @@
 
         <section>
             <div class="container">
-                <div class="flex gap-4 items-center" style="flex-wrap: wrap;">
+                <div class="flex gap-4 items-center animate-fade-up delay-200" style="flex-wrap: wrap;">
                     <div style="flex: 1; min-width: 300px;">
                         <img src="Assets/about.jpg" alt="Team meeting"
                             style="border-radius: 16px; box-shadow: var(--shadow);">
@@ -97,7 +99,8 @@
                     <h2>Mission & Vision</h2>
                     <p>Driving innovation and excellence in every interaction.</p>
                 </div>
-                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 3rem;">
+                <div class="grid animate-fade-up"
+                    style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 3rem;">
                     <div style="text-align: center;">
                         <div
                             style="width: 80px; height: 80px; background: rgba(79, 70, 229, 0.1); border-radius: 50%; display: flex; align-items: center; justify-content: center; margin: 0 auto 1.5rem; color: var(--primary); font-size: 2.5rem;">
@@ -139,7 +142,7 @@
                     <h2>Our Journey</h2>
                     <p>A decade of excellence and growth.</p>
                 </div>
-                <div
+                <div class="animate-fade-up"
                     style="max-width: 800px; margin: 0 auto; position: relative; border-left: 2px solid var(--border); padding-left: 2rem;">
                     <div style="margin-bottom: 3rem; position: relative;">
                         <div
@@ -188,7 +191,8 @@
                 <div class="footer-col">
                     <h3>IT SQUAD</h3>
                     <p style="color: var(--text-muted);">Empowering businesses with top-tier IT support and
-                        infrastructure management.</p>
+                        infrastructure management. We provide reliable, secure, and scalable solutions for companies of
+                        all sizes.</p>
                 </div>
                 <div class="footer-col">
                     <h3>Quick Links</h3>
@@ -197,15 +201,16 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="#">Help Desk</a></li>
-                        <li><a href="#">Cyber Security</a></li>
-                        <li><a href="#">Cloud Migration</a></li>
-                        <li><a href="#">Network Setup</a></li>
+                        <li><a href="service-details.html">Help Desk</a></li>
+                        <li><a href="service-details.html">Cyber Security</a></li>
+                        <li><a href="service-details.html">Cloud Migration</a></li>
+                        <li><a href="service-details.html">Network Setup</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -215,6 +220,15 @@
                         <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
                         <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
                     </ul>
+                    <div style="margin-top: 1rem; display: flex; gap: 1rem;">
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-facebook'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i class='bx bxl-twitter'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-linkedin'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-instagram'></i></a>
+                    </div>
                 </div>
             </div>
             <div class="copyright">
