--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <div class="container flex justify-between items-center">
-            <a href="index.html" class="logo"><i class='bx bx-code-block'></i> IT SQUAD</a>
+            <a href="index.html" class="logo">
+                <i class='bx bx-code-block'></i> IT SQUAD
+            </a>
             <nav>
                 <ul class="nav-links">
                     <li class="dropdown">
@@ -33,13 +35,13 @@
                         </div>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="login.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Login</a>
-                    </li>
+                    <li><a href="login.html" class="btn btn-outline" style="padding: 8px 16px;">Login</a></li>
+                    <li><a href="register.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Sign
+                            Up</a></li>
                 </ul>
             </nav>
             <div class="controls">
-                <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐RTL</button>
+                <button id="rtl-toggle" class="btn-icon-animate" title="RTL Toggle"><i class='bx bx-globe'></i></button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
@@ -49,7 +51,7 @@
     <main>
         <section class="hero" style="min-height: 40vh;">
             <div class="container" style="text-align: center;">
-                <div class="hero-content" style="margin: 0 auto;">
+                <div class="hero-content animate-fade-up" style="margin: 0 auto;">
                     <h1>Latest Insights</h1>
                     <p style="margin: 0 auto;">News, trends, and tips from the world of IT.</p>
                 </div>
@@ -77,7 +79,8 @@
         <!-- Blog Grid -->
         <section>
             <div class="container">
-                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <div class="grid animate-fade-up delay-200"
+                    style="grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
                     <!-- Article 1 -->
                     <article class="card" style="padding: 0; overflow: hidden;">
                         <img src="https://images.unsplash.com/photo-1496171367470-9ed9a91ea931?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
