--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,9 @@
 <body>
     <header>
         <div class="container flex justify-between items-center">
-            <a href="index.html" class="logo"><i class='bx bx-code-block'></i> IT SQUAD</a>
+            <a href="index.html" class="logo">
+                <i class='bx bx-code-block'></i> IT SQUAD
+            </a>
             <nav>
                 <ul class="nav-links">
                     <li class="dropdown">
@@ -73,6 +75,7 @@
                     </li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
+
                     <li class="dropdown">
                         <a href="#">Dashboard <i class='bx bx-chevron-down'></i></a>
                         <div class="dropdown-content">
@@ -80,12 +83,14 @@
                             <a href="admin-dashboard.html">Admin Dashboard</a>
                         </div>
                     </li>
-
+                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="login.html" class="btn btn-outline" style="padding: 8px 16px;">Login</a></li>
+                    <li><a href="register.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Sign
+                            Up</a></li>
                 </ul>
             </nav>
             <div class="controls">
-                <button id="rtl-toggle" class="btn btn-outline"
-                    style="padding: 5px 10px; font-size: 0.8rem;">🌐RTL</button>
+                <button id="rtl-toggle" class="btn-icon-animate" title="RTL Toggle"><i class='bx bx-globe'></i></button>
                 <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
                 <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
@@ -94,11 +99,12 @@
 
     <main>
         <section class="hero"
-            style="min-height: 40vh; background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1596558450255-7c0bbf510499?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
+            style="min-height: 40vh; background: linear-gradient(135deg, rgba(79, 70, 229, 0.9), rgba(236, 72, 153, 0.9)), url('Assets/bg.jpg'); background-size: cover; background-position: center;">
             <div class="container" style="text-align: center;">
-                <div class="hero-content" style="margin: 0 auto; color: white;">
-                    <h1 style="color: white;">Get In Touch</h1>
-                    <p style="margin: 0 auto; color: #e2e8f0;">We'd love to hear from you. Here's how you can reach us.
+                <div class="hero-content animate-fade-up" style="margin: 0 auto; color: white;">
+                    <h1 style="color: white; font-size: 3rem; margin-bottom: 1rem;">Get In Touch</h1>
+                    <p style="margin: 0 auto; color: rgba(255,255,255,0.9); font-size: 1.25rem;">We'd love to hear from
+                        you. Here's how you can reach us.
                     </p>
                 </div>
             </div>
@@ -106,7 +112,8 @@
 
         <section>
             <div class="container">
-                <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 4rem;">
+                <div class="grid animate-fade-up delay-200"
+                    style="grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 4rem;">
 
                     <div>
                         <div class="section-title" style="text-align: left;">
@@ -222,9 +229,9 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>IT SQUAD</h3>
-                    <p style="color: var(--text-muted);">Empowering businesses with top-tier IT support
-                        and
-                        infrastructure management.</p>
+                    <p style="color: var(--text-muted);">Empowering businesses with top-tier IT support and
+                        infrastructure management. We provide reliable, secure, and scalable solutions for companies of
+                        all sizes.</p>
                 </div>
                 <div class="footer-col">
                     <h3>Quick Links</h3>
@@ -233,15 +240,16 @@
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
                     <h3>Services</h3>
                     <ul>
-                        <li><a href="#">Help Desk</a></li>
-                        <li><a href="#">Cyber Security</a></li>
-                        <li><a href="#">Cloud Migration</a></li>
-                        <li><a href="#">Network Setup</a></li>
+                        <li><a href="service-details.html">Help Desk</a></li>
+                        <li><a href="service-details.html">Cyber Security</a></li>
+                        <li><a href="service-details.html">Cloud Migration</a></li>
+                        <li><a href="service-details.html">Network Setup</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -251,6 +259,15 @@
                         <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
                         <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
                     </ul>
+                    <div style="margin-top: 1rem; display: flex; gap: 1rem;">
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-facebook'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i class='bx bxl-twitter'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-linkedin'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-instagram'></i></a>
+                    </div>
                 </div>
             </div>
             <div class="copyright">
