--- a/index2.html
+++ b/index2.html
@@ -55,6 +55,16 @@
             z-index: 10;
             border-radius: 1rem;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 2rem;
+        }
+
+        @media (min-width: 768px) {
+            .stats-bar {
+                grid-template-columns: repeat(4, 1fr);
+                gap: 1rem;
+            }
         }
 
         .stat-item {
@@ -95,8 +105,9 @@
                         </div>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="login.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Login</a>
-                    </li>
+                    <li><a href="login.html" class="btn btn-outline" style="padding: 8px 16px;">Login</a></li>
+                    <li><a href="register.html" class="btn btn-primary" style="padding: 8px 16px; color: white;">Sign
+                            Up</a></li>
                 </ul>
             </nav>
             <div class="controls">
@@ -112,7 +123,7 @@
         <section class="hero home2-hero">
             <div class="home2-overlay"></div>
             <div class="container home2-content">
-                <h1>Enterprise IT Management Reimagined</h1>
+                <h1 class="text-xl">Enterprise IT Management Reimagined</h1>
                 <p style="font-size: 1.5rem; color: #cbd5e1; margin-bottom: 3rem;">Secure. Scalable. Reliable.</p>
                 <div class="flex justify-center gap-1">
                     <a href="#" class="btn btn-primary" style="background: var(--accent); border: none;">View
@@ -124,21 +135,21 @@
 
         <!-- Stats Bar -->
         <div class="container">
-            <div class="stats-bar grid" style="grid-template-columns: repeat(4, 1fr);">
+            <div class="stats-bar">
                 <div class="stat-item">
-                    <div class="stat-number">500+</div>
+                    <div class="stat-number" data-target="500">0+</div>
                     <div>Clients</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">99.9%</div>
+                    <div class="stat-number" data-target="99.9">0%</div>
                     <div>Uptime</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">15m</div>
+                    <div class="stat-number" data-target="15">0m</div>
                     <div>Response Time</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">24/7</div>
+                    <div class="stat-number" data-target="24">0/7</div>
                     <div>Support</div>
                 </div>
             </div>
@@ -153,8 +164,9 @@
                 <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 2rem;">
                     <div class="card" style="padding: 0; overflow: hidden;">
                         <div
-                            style="height: 200px; background: #e2e8f0; display: flex; align-items: center; justify-content: center;">
-                            <i class='bx bx-news' style="font-size: 4rem; color: var(--primary);"></i>
+                            style="height: 200px; background: linear-gradient(135deg, #eef2ff 0%, #e0e7ff 100%); display: flex; align-items: center; justify-content: center;">
+                            <img src="Assets/icon_support_3d.png" alt="AI Support" class="vibrant-icon"
+                                style="width: 100px; height: 100px;">
                         </div>
                         <div style="padding: 2rem;">
                             <h3>The Future of Cloud Computing</h3>
@@ -165,8 +177,9 @@
                     </div>
                     <div class="card" style="padding: 0; overflow: hidden;">
                         <div
-                            style="height: 200px; background: #e2e8f0; display: flex; align-items: center; justify-content: center;">
-                            <i class='bx bx-lock-alt' style="font-size: 4rem; color: var(--secondary);"></i>
+                            style="height: 200px; background: linear-gradient(135deg, #ecfdf5 0%, #d1fae5 100%); display: flex; align-items: center; justify-content: center;">
+                            <img src="Assets/icon_security_3d.png" alt="Security" class="vibrant-icon"
+                                style="width: 100px; height: 100px;">
                         </div>
                         <div style="padding: 2rem;">
                             <h3>Cybersecurity Trends 2024</h3>
@@ -307,18 +320,50 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <h3>IT SQUAD PRO</h3>
-                    <p style="color: var(--text-muted);">Enterprise grade solutions for the modern world.</p>
+                    <h3>IT SQUAD</h3>
+                    <p style="color: var(--text-muted);">Empowering businesses with top-tier IT support and
+                        infrastructure management. We provide reliable, secure, and scalable solutions for companies of
+                        all sizes.</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="service-details.html">Help Desk</a></li>
+                        <li><a href="service-details.html">Cyber Security</a></li>
+                        <li><a href="service-details.html">Cloud Migration</a></li>
+                        <li><a href="service-details.html">Network Setup</a></li>
+                    </ul>
                 </div>
                 <div class="footer-col">
                     <h3>Contact</h3>
                     <ul>
+                        <li><i class='bx bx-map'></i> 123 Innovation Drive, Tech City, CA</li>
+                        <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
                         <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
                     </ul>
+                    <div style="margin-top: 1rem; display: flex; gap: 1rem;">
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-facebook'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i class='bx bxl-twitter'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-linkedin'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-instagram'></i></a>
+                    </div>
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2026 IT SQUAD PRO. All rights reserved.</p>
+                <p>&copy; 2026 IT SQUAD. All rights reserved.</p>
             </div>
         </div>
     </footer>
