--- a/register.html
+++ b/register.html
@@ -9,85 +9,177 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
-<body
-    style="display: flex; align-items: center; justify-content: center; min-height: 100vh; background: var(--bg-body);">
+<body style="display: flex; flex-direction: column; min-height: 100vh; background: var(--bg-body);">
 
-    <div style="display: flex; min-height: 100vh; background: var(--bg-body);">
-        <div
-            style="flex: 1; display: none; background: url('https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80') center/cover; position: relative; @media(min-width: 768px) { display: block; }">
-            <div
-                style="position: absolute; inset: 0; background: linear-gradient(to bottom, rgba(79, 70, 229, 0.4), rgba(0, 0, 0, 0.6)); display: flex; align-items: flex-end; padding: 3rem; color: white;">
-                <div>
-                    <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">Join the Squad</h2>
-                    <p style="font-size: 1.1rem; opacity: 0.9;">Start your journey to better IT management today.</p>
-                </div>
+    <header>
+        <div class="container flex justify-between items-center">
+            <a href="index.html" class="logo">
+                <i class='bx bx-code-block'></i> IT SQUAD
+            </a>
+            <nav>
+                <ul class="nav-links">
+                    <li class="dropdown">
+                        <a href="#">Home <i class='bx bx-chevron-down'></i></a>
+                        <div class="dropdown-content">
+                            <a href="index.html">Home 1</a>
+                            <a href="index2.html">Home 2</a>
+                        </div>
+                    </li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+
+                    <li class="dropdown">
+                        <a href="#">Dashboard <i class='bx bx-chevron-down'></i></a>
+                        <div class="dropdown-content">
+                            <a href="user-dashboard.html">User Dashboard</a>
+                            <a href="admin-dashboard.html">Admin Dashboard</a>
+                        </div>
+                    </li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="login.html" class="btn btn-outline" style="padding: 8px 16px;">Login</a></li>
+                    <li><a href="register.html" class="btn btn-primary active"
+                            style="padding: 8px 16px; color: white;">Sign
+                            Up</a></li>
+                </ul>
+            </nav>
+            <div class="controls">
+                <button id="rtl-toggle" class="btn-icon-animate" title="RTL Toggle"><i class='bx bx-globe'></i></button>
+                <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
+                <div id="menu-toggle" class="menu-toggle"><i class='bx bx-menu'></i></div>
             </div>
         </div>
+    </header>
 
-        <div
-            style="flex: 1; display: flex; align-items: center; justify-content: center; padding: 2rem; position: relative;">
-            <!-- Theme Toggle (absolute position) -->
-            <div style="position: absolute; top: 20px; right: 20px;">
-                <button id="theme-toggle" class="icon-btn"><i class='bx bx-moon'></i></button>
-            </div>
+    <div class="register-wrapper animate-fade-in"
+        style="min-height: calc(100vh - 80px); display: flex; align-items: center; padding: 2rem 0;">
+        <div class="container">
+            <div class="grid"
+                style="grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 4rem; align-items: center; background: var(--bg-card); border-radius: 20px; box-shadow: var(--shadow); overflow: hidden; border: 1px solid var(--border);">
 
-            <div class="card"
-                style="width: 100%; max-width: 450px; padding: 2.5rem; box-shadow: none; border: none; background: transparent;">
-                <div style="text-align: center; margin-bottom: 2rem;">
-                    <a href="index.html" class="logo" style="justify-content: center; margin-bottom: 1rem;"><i
-                            class='bx bx-code-block'></i> IT SQUAD</a>
-                    <h2>Create Account</h2>
-                    <p style="color: var(--text-muted);">Get started with IT SQUAD today.</p>
+                <!-- Left Content Side -->
+                <div
+                    style="padding: 3rem; background: linear-gradient(135deg, rgba(79, 70, 229, 0.1) 0%, rgba(14, 165, 233, 0.1) 100%); height: 100%; display: flex; flex-direction: column; justify-content: center;">
+                    <div style="margin-bottom: 2rem;">
+                        <img src="https://images.unsplash.com/photo-1531482615713-2afd69097998?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+                            alt="Team Support"
+                            style="border-radius: 12px; box-shadow: var(--shadow); margin-bottom: 2rem; width: 100%; object-fit: cover; height: 250px;">
+                        <h2 style="font-size: 2rem; margin-bottom: 1rem;">Join Our Squad!</h2>
+                        <p style="color: var(--text-muted); font-size: 1.1rem; line-height: 1.6;">
+                            Create an account to start submitting tickets and getting the expert help you need, right
+                            when you need it.
+                        </p>
+                    </div>
+
+                    <div class="flex gap-2" style="flex-direction: column;">
+                        <div class="flex items-center gap-1">
+                            <i class='bx bx-check-circle' style="color: var(--primary); font-size: 1.5rem;"></i>
+                            <span style="font-weight: 500;">Fast Response Times</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                            <i class='bx bx-check-circle' style="color: var(--primary); font-size: 1.5rem;"></i>
+                            <span style="font-weight: 500;">Expert Technicians</span>
+                        </div>
+                        <div class="flex items-center gap-1">
+                            <i class='bx bx-check-circle' style="color: var(--primary); font-size: 1.5rem;"></i>
+                            <span style="font-weight: 500;">Proactive Maintenance</span>
+                        </div>
+                    </div>
                 </div>
 
-                <form action="#" style="display: flex; flex-direction: column; gap: 1rem;">
-                    <div>
-                        <label for="name" style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Full
-                            Name</label>
-                        <input type="text" id="name" placeholder="John Doe"
-                            style="width: 100%; padding: 10px; border: 1px solid var(--border); border-radius: 8px; background: var(--bg-card); color: var(--text-main);">
-                    </div>
-                    <div>
-                        <label for="email" style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Email
-                            Address</label>
-                        <input type="email" id="email" placeholder="name@company.com"
-                            style="width: 100%; padding: 10px; border: 1px solid var(--border); border-radius: 8px; background: var(--bg-card); color: var(--text-main);">
-                    </div>
-                    <div>
-                        <label for="password"
-                            style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Password</label>
-                        <input type="password" id="password" placeholder="Min. 8 characters"
-                            style="width: 100%; padding: 10px; border: 1px solid var(--border); border-radius: 8px; background: var(--bg-card); color: var(--text-main);">
-                    </div>
-                    <div>
-                        <label for="confirm-password"
-                            style="display: block; margin-bottom: 0.5rem; font-weight: 500;">Confirm
-                            Password</label>
-                        <input type="password" id="confirm-password" placeholder="Confirm Password"
-                            style="width: 100%; padding: 10px; border: 1px solid var(--border); border-radius: 8px; background: var(--bg-card); color: var(--text-main);">
+                <!-- Right Form Side -->
+                <div style="padding: 3rem;">
+                    <div style="text-align: center; margin-bottom: 2rem;">
+                        <h2 style="font-size: 2rem;">Create Account</h2>
+                        <p style="color: var(--text-muted);">Get started with IT SQUAD today.</p>
                     </div>
 
-                    <div style="display: flex; align-items: center; gap: 0.5rem;">
-                        <input type="checkbox" id="terms">
-                        <label for="terms" style="color: var(--text-muted); font-size: 0.9rem;">I agree to the <a
-                                href="#" style="color: var(--primary);">Terms & Conditions</a></label>
-                    </div>
+                    <form action="#" style="display: flex; flex-direction: column; gap: 1rem;">
+                        <div class="form-group">
+                            <label class="form-label">Full Name</label>
+                            <input type="text" class="form-control" placeholder="John Doe">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Email Address</label>
+                            <input type="email" class="form-control" placeholder="name@company.com">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Password</label>
+                            <input type="password" class="form-control" placeholder="Min. 8 characters">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Confirm Password</label>
+                            <input type="password" class="form-control" placeholder="Confirm Password">
+                        </div>
 
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Sign Up</button>
+                        <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 1rem;">
+                            <input type="checkbox" id="terms" style="accent-color: var(--primary);">
+                            <label for="terms" style="color: var(--text-muted); font-size: 0.9rem;">I agree to the <a
+                                    href="#" style="color: var(--primary);">Terms & Conditions</a></label>
+                        </div>
 
-                    <div style="text-align: center; margin-top: 1rem; font-size: 0.9rem;">
-                        <a href="index.html" style="color: var(--text-muted);"><i class='bx bx-left-arrow-alt'></i> Back
-                            to Home</a>
-                    </div>
-                </form>
+                        <button type="submit" class="btn btn-primary" style="width: 100%;">Sign Up</button>
 
-                <div style="text-align: center; margin-top: 1.5rem; font-size: 0.9rem; color: var(--text-muted);">
-                    Already have an account? <a href="login.html" style="color: var(--primary); font-weight: 600;">Log
-                        in</a>
+                        <div style="text-align: center; margin-top: 1rem; font-size: 0.9rem;">
+                            Already have an account? <a href="login.html"
+                                style="color: var(--primary); font-weight: 600;">Log in</a>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <h3>IT SQUAD</h3>
+                    <p style="color: var(--text-muted);">Empowering businesses with top-tier IT support and
+                        infrastructure management. We provide reliable, secure, and scalable solutions for companies of
+                        all sizes.</p>
+                </div>
+                <div class="footer-col">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="service-details.html">Help Desk</a></li>
+                        <li><a href="service-details.html">Cyber Security</a></li>
+                        <li><a href="service-details.html">Cloud Migration</a></li>
+                        <li><a href="service-details.html">Network Setup</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Contact</h3>
+                    <ul>
+                        <li><i class='bx bx-map'></i> 123 Innovation Drive, Tech City, CA</li>
+                        <li><i class='bx bx-phone'></i> +1 (555) 123-4567</li>
+                        <li><i class='bx bx-envelope'></i> support@itsquad.com</li>
+                    </ul>
+                    <div style="margin-top: 1rem; display: flex; gap: 1rem;">
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-facebook'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i class='bx bxl-twitter'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-linkedin'></i></a>
+                        <a href="#" style="color: var(--primary); font-size: 1.5rem;"><i
+                                class='bx bxl-instagram'></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2026 IT SQUAD. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 
     <script src="main.js"></script>
 </body>
